--- a/wallshare/public/style.css
+++ b/wallshare/public/style.css
@@ -1,7 +1,3 @@
-.static {
-  position: static;
-}
-
 .fixed {
   position: fixed;
 }
@@ -61,6 +57,10 @@
   top: -0.75rem;
 }
 
+.top-\[99\%\] {
+  top: 99%;
+}
+
 .right-3 {
   right: 0.75rem;
 }
@@ -101,6 +101,10 @@
   z-index: 10;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .z-30 {
   z-index: 30;
 }
@@ -123,6 +127,14 @@
 
 .m-1 {
   margin: 0.25rem;
+}
+
+.m-0\.5 {
+  margin: 0.125rem;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .mx-auto {
@@ -188,8 +200,8 @@
   margin-right: 0px;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .mr-1 {
@@ -202,6 +214,10 @@
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .inline {
@@ -248,6 +264,10 @@
   height: 2.25rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -260,24 +280,16 @@
   height: 1rem;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
 .h-screen {
   height: 100vh;
 }
 
-.h-\[9vh\] {
-  height: 9vh;
-}
-
-.h-\[10vh\] {
-  height: 10vh;
-}
-
 .h-\[9\.5vh\] {
   height: 9.5vh;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .max-h-\[35vh\] {
@@ -334,6 +346,10 @@
   width: fit-content;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-16 {
   width: 4rem;
 }
@@ -346,8 +362,8 @@
   width: 2rem;
 }
 
-.w-2\/4 {
-  width: 50%;
+.w-2\/5 {
+  width: 40%;
 }
 
 .w-4 {
@@ -358,6 +374,10 @@
   width: auto;
 }
 
+.w-4\/5 {
+  width: 80%;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -366,20 +386,8 @@
   width: 66.666667%;
 }
 
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-1\.5 {
-  width: 0.375rem;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-screen {
-  width: 100vw;
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .flex-shrink {
@@ -501,9 +509,20 @@
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
+.divide-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(2px * var(--tw-divide-x-reverse));
+  border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
 .divide-blue-400 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgba(96, 165, 250, var(--tw-divide-opacity));
+}
+
+.divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
 }
 
 .self-center {
@@ -520,14 +539,6 @@
 
 .overflow-y-auto {
   overflow-y: auto;
-}
-
-.overflow-x-visible {
-  overflow-x: visible;
-}
-
-.overflow-y-scroll {
-  overflow-y: scroll;
 }
 
 .rounded-md {
@@ -550,6 +561,10 @@
   border-top-left-radius: 0.5rem;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -558,12 +573,16 @@
   border-width: 2px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-b-4 {
   border-bottom-width: 4px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-blue-600 {
@@ -576,19 +595,14 @@
   border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-
-.border-green-400 {
-  --tw-border-opacity: 1;
-  border-color: rgba(52, 211, 153, var(--tw-border-opacity));
-}
-
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+
+.border-blue-400 {
+  --tw-border-opacity: 1;
+  border-color: rgba(96, 165, 250, var(--tw-border-opacity));
 }
 
 .border-blue-300 {
@@ -599,16 +613,6 @@
 .border-red-300 {
   --tw-border-opacity: 1;
   border-color: rgba(252, 165, 165, var(--tw-border-opacity));
-}
-
-.border-blue-400 {
-  --tw-border-opacity: 1;
-  border-color: rgba(96, 165, 250, var(--tw-border-opacity));
-}
-
-.border-blue-500 {
-  --tw-border-opacity: 1;
-  border-color: rgba(59, 130, 246, var(--tw-border-opacity));
 }
 
 .border-green-500 {
@@ -663,10 +667,6 @@
   background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-gray-100\/30 {
   background-color: rgba(243, 244, 246, 0.3);
 }
@@ -675,14 +675,14 @@
   background-color: rgba(59, 130, 246, 0.7);
 }
 
-.bg-blue-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(239, 246, 255, var(--tw-bg-opacity));
-}
-
 .bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 
 .fill-current {
@@ -819,8 +819,8 @@
   padding-bottom: 0.75rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-left {
@@ -835,14 +835,14 @@
   vertical-align: bottom;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -899,6 +899,21 @@
   color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgba(16, 185, 129, var(--tw-text-opacity));
+}
+
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgba(31, 41, 55, var(--tw-text-opacity));
@@ -919,18 +934,8 @@
   color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgba(59, 130, 246, var(--tw-text-opacity));
-}
-
 .text-transparent {
   color: transparent;
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgba(239, 68, 68, var(--tw-text-opacity));
 }
 
 .text-green-400 {
@@ -963,33 +968,26 @@
   color: rgba(37, 99, 235, var(--tw-text-opacity));
 }
 
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgba(96, 165, 250, var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgba(96, 165, 250, var(--tw-text-opacity));
+.text-gray-800\/90 {
+  color: rgba(31, 41, 55, 0.9);
 }
 
 .underline {
   text-decoration: underline;
 }
 
-.placeholder-gray-100::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-placeholder-opacity));
-}
-
-.placeholder-gray-100:-ms-input-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-placeholder-opacity));
-}
-
-.placeholder-gray-100::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-placeholder-opacity));
+.opacity-0 {
+  opacity: 0;
 }
 
 .opacity-40 {
@@ -1006,11 +1004,6 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 .ring-blue-400 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(96, 165, 250, var(--tw-ring-opacity));
@@ -1023,12 +1016,6 @@
 
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
-  -webkit-backdrop-filter: var(--tw-backdrop-filter);
-          backdrop-filter: var(--tw-backdrop-filter);
-}
-
-.backdrop-blur {
-  --tw-backdrop-blur: blur(8px);
   -webkit-backdrop-filter: var(--tw-backdrop-filter);
           backdrop-filter: var(--tw-backdrop-filter);
 }
@@ -1060,10 +1047,6 @@
 
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-100 {
-  transition-duration: 100ms;
 }
 
 /*! tailwindcss v2.2.16 | MIT License | https://tailwindcss.com */
@@ -1696,6 +1679,11 @@ video {
   --tw-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+* {
+  outline: none !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 html, body{
   max-width: 100vw;
   min-height: 100vh;
@@ -2061,6 +2049,10 @@ div.button-form-group-multiple.spread > button {
 div.button-form-group-multiple > button {
   margin-right: 0.75rem;
   margin-left: 0.75rem !important;
+  --tw-border-opacity: 1;
+  border-color: rgba(96, 165, 250, var(--tw-border-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(96, 165, 250, var(--tw-ring-opacity));
 }
 
 div.button-form-group-multiple > button:first-child {
@@ -2086,13 +2078,9 @@ div.button-form-group-multiple > button, div.button-form-group > button {
   border-radius: 0.375rem;
   border-width: 1px;
   border-width: 2px;
-  --tw-border-opacity: 1;
-  border-color: rgba(96, 165, 250, var(--tw-border-opacity));
   padding: 0.375rem;
   --tw-text-opacity: 1;
   color: rgba(55, 65, 81, var(--tw-text-opacity));
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgba(96, 165, 250, var(--tw-ring-opacity));
 }
 
 div.button-form-group-multiple > button:hover, div.button-form-group > button:hover {
@@ -2197,16 +2185,11 @@ div.tag-input {
   display: flex;
   width: 100%;
   flex-direction: column;
-  padding: 0.375rem;
 }
 
 @media (min-width: 768px) {
   div.tag-input {
     flex-direction: row;
-  }
-
-  div.tag-input {
-    padding: 0.75rem;
   }
 }
 
@@ -2346,11 +2329,63 @@ div.form-div {
   }
 }
 
-.hover\:scale-\[1\.001\]:hover {
-  --tw-scale-x: 1.001;
-  --tw-scale-y: 1.001;
-  transform: var(--tw-transform);
+.bg-blur {
+  background: rgba(0, 0, 0, 0.75);
 }
+
+.underline-dotted {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  -webkit-text-decoration-style: dotted;
+          text-decoration-style: dotted;
+}
+
+.fade-in {
+  -webkit-animation: fade-in 300ms 0s ease-in-out forwards;
+          animation: fade-in 300ms 0s ease-in-out forwards;
+}
+
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fade-out{
+  from{
+    opacity: 1;
+  }
+
+  to{
+    opacity: 0;
+  }
+}
+
+@keyframes fade-out{
+  from{
+    opacity: 1;
+  }
+
+  to{
+    opacity: 0;
+  }
+}
+
+/*  */
 
 .hover\:border-gray-200:hover {
   --tw-border-opacity: 1;
@@ -2376,10 +2411,6 @@ div.form-div {
   --tw-bg-opacity: 100;
 }
 
-.hover\:fill-\[transparent\]:hover {
-  fill: transparent;
-}
-
 .hover\:fill-current:hover {
   fill: currentColor;
 }
@@ -2402,6 +2433,11 @@ div.form-div {
 .hover\:text-gray-100:hover {
   --tw-text-opacity: 1;
   color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
+
+.hover\:text-gray-600:hover {
+  --tw-text-opacity: 1;
+  color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 
 .hover\:opacity-\[100\]:hover {
@@ -2440,9 +2476,14 @@ div.form-div {
   --tw-ring-color: rgba(165, 180, 252, var(--tw-ring-opacity));
 }
 
-.focus\:border-green-200:focus {
-  --tw-border-opacity: 1;
-  border-color: rgba(167, 243, 208, var(--tw-border-opacity));
+.hover\:ring-blue-100:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(219, 234, 254, var(--tw-ring-opacity));
+}
+
+.hover\:ring-gray-200:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(229, 231, 235, var(--tw-ring-opacity));
 }
 
 .focus\:border-blue-400:focus {
@@ -2471,11 +2512,65 @@ div.form-div {
 }
 
 @media (min-width: 768px) {
+  .md\:z-50 {
+    z-index: 50;
+  }
+
+  .md\:z-10 {
+    z-index: 10;
+  }
+
   .md\:flex {
     display: flex;
   }
 
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-\[90vh\] {
+    height: 90vh;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
+  .md\:max-w-full {
+    max-width: 100%;
+  }
+
+  .md\:border-0 {
+    border-width: 0px;
+  }
+
+  .md\:p-3 {
+    padding: 0.75rem;
+  }
+
+  .md\:p-0 {
+    padding: 0px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:col-start-1 {
+    grid-column-start: 1;
+  }
+
+  .lg\:col-end-1 {
+    grid-column-end: 1;
+  }
+
+  .lg\:col-end-4 {
+    grid-column-end: 4;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
