--- a/wallshare/src/style.css
+++ b/wallshare/src/style.css
@@ -3,6 +3,11 @@
 @tailwind components;
 @tailwind base;
 
+* {
+  outline: none !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 html, body{
   max-width: 100vw;
   min-height: 100vh;
@@ -69,14 +74,14 @@ div.button-form-group-multiple.spread > button{
   @apply w-4/5 flex flex-shrink;
 }
 div.button-form-group-multiple > button{
-  @apply mr-3 !ml-3;
+  @apply mr-3 !ml-3 ring-blue-400 border-blue-400 ;
 }
 div.button-form-group-multiple > button:first-child{
   @apply !ml-auto bg-red-500 text-white border-red-500 ring-red-300;
 }
 div.button-form-group-multiple > button,
 div.button-form-group > button{
-  @apply h-9 p-1.5 ml-auto border z-[6] relative text-gray-700 border-blue-400 border-2 hover:ring-2 ring-blue-400 rounded-md flex justify-center items-center;
+  @apply h-9 p-1.5 ml-auto border z-[6] relative text-gray-700 border-2 hover:ring-2  rounded-md flex justify-center items-center;
 }
 div.form-group-empty{
   @apply m-1 p-1 z-[6] md:p-3 text-center text-base text-gray-700;
@@ -97,13 +102,13 @@ div.form-header{
   @apply p-4 z-20 text-gray-800 font-bold text-4xl relative text-center ;
 }
 div.tag-input{
-  @apply p-1.5 md:p-3 z-[6] flex flex-col md:flex-row w-full relative;
+  @apply z-[6] flex flex-col md:flex-row w-full relative;
 }
 div.tag-input > label{
   @apply py-[0.2px] px-0.5 max-h-[80%] leading-tight text-base font-medium text-gray-700 w-full md:w-1/3 flex-shrink-0 ; 
 }
 div.tag-input > div{
-  @apply border-blue-300 hover:border-blue-400 border-2 overflow-x-auto flex-wrap flex-shrink flex p-0 rounded-md;
+  @apply border-blue-300 hover:border-blue-400 border-2 overflow-x-auto flex flex-wrap flex-shrink p-0 rounded-md;
 }
 div.tag-input > span:last-child{
   @apply p-0 px-0.5 text-xs text-red-500 relative md:absolute md:left-1/3 md:-bottom-1.5 md:p-1 md:mt-2;
@@ -124,3 +129,26 @@ div.form-div > div.diagonal-clip{
 div.form-div{
   @apply my-3 relative mx-auto w-11/12 overflow-hidden md:w-3/5 lg:w-1/2 rounded-lg border-0 border-gray-200;
 }
+.bg-blur {
+  background: rgba(0, 0, 0, 0.75);
+}
+.underline-dotted {
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+}
+.fade-in {
+  animation: fade-in 300ms 0s ease-in-out forwards;
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-out{
+  from{opacity: 1;}
+  to{opacity: 0;}
+}
+/*  */
