--- a/wallshare/public/style.css
+++ b/wallshare/public/style.css
@@ -121,14 +121,6 @@
   margin: 1.5rem;
 }
 
-.m-1\.5 {
-  margin: 0.375rem;
-}
-
-.m-1 {
-  margin: 0.25rem;
-}
-
 .m-0\.5 {
   margin: 0.125rem;
 }
@@ -180,8 +172,16 @@
   margin-left: 0.75rem;
 }
 
+.mr-1\.5 {
+  margin-right: 0.375rem;
+}
+
 .ml-0 {
   margin-left: 0px;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .mr-2 {
@@ -202,10 +202,6 @@
 
 .mb-0 {
   margin-bottom: 0px;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
 }
 
 .ml-1 {
@@ -573,16 +569,16 @@
   border-width: 2px;
 }
 
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-b-4 {
   border-bottom-width: 4px;
 }
 
 .border-b {
   border-bottom-width: 1px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-blue-600 {
@@ -685,6 +681,11 @@
   background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 
+.bg-blue-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(239, 246, 255, var(--tw-bg-opacity));
+}
+
 .fill-current {
   fill: currentColor;
 }
@@ -754,14 +755,14 @@
   padding-bottom: 0.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-0\.5 {
+  padding-left: 0.125rem;
+  padding-right: 0.125rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .px-2\.5 {
@@ -769,19 +770,9 @@
   padding-right: 0.625rem;
 }
 
-.px-0\.5 {
-  padding-left: 0.125rem;
-  padding-right: 0.125rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 .py-0\.5 {
@@ -797,6 +788,16 @@
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pt-2 {
@@ -821,6 +822,14 @@
 
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pb-0\.5 {
+  padding-bottom: 0.125rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .text-left {
@@ -980,6 +989,11 @@
 
 .text-gray-800\/90 {
   color: rgba(31, 41, 55, 0.9);
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgba(220, 38, 38, var(--tw-text-opacity));
 }
 
 .underline {
@@ -2484,6 +2498,16 @@ div.form-div {
 .hover\:ring-gray-200:hover {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(229, 231, 235, var(--tw-ring-opacity));
+}
+
+.hover\:ring-blue-200:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(191, 219, 254, var(--tw-ring-opacity));
+}
+
+.hover\:ring-red-200:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(254, 202, 202, var(--tw-ring-opacity));
 }
 
 .focus\:border-blue-400:focus {
